--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-inverse {
    background-color: rgba(0,0,0,.4);
 }
-#band-members, #email-newsletter, #website-credits {
+#diskography, #band-members, #email-newsletter, #website-credits {
    background-color: rgba(0,0,0,.4);
    padding: 10px 20px;
    border-color: #101010;
