--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,18 @@ section h2, section li {
 h1, h2, h3, h4, h5, h6 {
    font-family: Abel, Helvetica, Arial, sans-serif;
 }
+h2 {
+   margin-top: 30px;
+   margin-bottom: 20px;
+}
+h3 {
+   margin-bottom: 30px;
+}
 .logo {
    float: left;
 }
 .navbar-nav {
-   margin: 40px 0 0;
+   margin: 30px 0 0;
 }
 .navbar-inverse .navbar-nav>li>a {
    font-family: Abel, Helvetica, Arial, sans-serif;
@@ -55,9 +62,7 @@ input, textarea {
    -moz-box-shadow: 5px 5px 5px black !important;
    box-shadow: 5px 5px 5px black !important;
 }
-.col-height {
-   height: 55em;
-}
+
 .band-members {
    float: left;
    margin-right: 20px;
@@ -78,12 +83,24 @@ footer {
 }
 
 .btn-default {
+   font-family: Abel, Helvetica, Arial, sans-serif;
+   font-size: 24px;
    color: #fff;
    box-shadow: 5px 5px 5px black !important;
    background-color: rgba(35,82,124,.4);
    padding: 10px 20px;
    border-color: #101010;
+   margin-top: 20px;
+   margin-bottom: 20px;
 }
+.btn-default:hover, .btn-default:active {
+   color: #fff;
+   box-shadow: 5px 5px 5px black !important;
+   background-color: rgba(0,0,0,.4);
+   padding: 10px 20px;
+   border-color: #101010;
+}
+
 .email-pref {
    list-style: none;
 }
