--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ h3 {
 .navbar-inverse {
    background-color: rgba(0,0,0,.4);
 }
-#diskography, #band-members, #email-newsletter, #website-credits {
+#discography, #band-members, #email-newsletter, #website-credits {
    background-color: rgba(0,0,0,.4);
    padding: 10px 20px;
    border-color: #101010;
