--- a/css/styles.css
+++ b/css/styles.css
@@ -112,3 +112,71 @@ ol li:nth-child(odd) {
 ol li {
    padding: .3em 0 .3em .4em;
 }
+
+/* Text meant only for screen readers */
+.screen-reader-text {
+   clip: rect(1px, 1px, 1px, 1px);
+   height: 1px;
+   overflow: hidden;
+   position: absolute !important;
+   width: 1px;
+}
+
+.menu-social a:before {
+   display: inline-block;
+   padding: 0 5px;
+   vertical-align: top;
+   font-family: 'Fontawesome';
+   font-size: 20px;
+   color: #fff;
+   -webkit-font-smoothing: antialiased;
+   content: '\f0c0';
+}
+
+.menu-social a[href*="facebook.com"]::before {
+   content: '\f09a';
+}
+
+.menu-social a[href*="twitter.com"]::before {
+   content: '\f099';
+}
+
+.menu-social a[href*="dribbble.com"]::before {
+   content: '\f17d';
+}
+
+.menu-social a[href*="plus.google.com"]::before {
+   content: '\f0d5';
+}
+
+.menu-social a[href*="pinterest.com"]::before {
+   content: '\f0d2';
+}
+
+.menu-social a[href*="github.com"]::before {
+   content: '\f09b';
+}
+
+.menu-social a[href*="tumblr.com"]::before {
+   content: '\f173';
+}
+
+.menu-social a[href*="youtube.com"]::before {
+   content: '\f167';
+}
+
+.menu-social li a[href*="flickr.com"]::before {
+   content: '\f16e';
+}
+
+.menu-social li a[href*="vimeo.com"]::before {
+   content: '\f194';
+}
+
+.menu-social li a[href*="instagram.com"]::before {
+   content: '\f16d';
+}
+
+.menu-social li a[href*="linkedin.com"]::before {
+   content: '\f0e1';
+}
